force-app/main/default/objects/custom_create178__c/custom_create178__c.object-meta.xml
<CustomObject>
    <label>Custom created object178</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects178</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>