force-app/main/default/objects/custom_create178__c/fields/custom_create_178field629__c.field-meta.xml
<CustomField>
    <fullName>custom_create_178field629__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 178field629</label>
    <type>Checkbox</type>
</CustomField>